compiler/src/test/resources/golden/errors/map_wrong_key_type.dawn
pub fn main() -> Unit !io = {
  let m = map_from([("a", 1)])
  println(to_string(map_get(m, 5)))
}
