compiler/src/test/resources/golden/errors/map_wrong_key_type.err
error: argument type mismatch: expected String, got Int
  --> map_wrong_key_type.dawn:3:32
  |
3 |   println(to_string(map_get(m, 5)))
  |                                ^
  = hint: signature: fn map_get[K, V](m: Map[K, V], key: K) -> Option[V]
